--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </style>
 </head>
 <body>
-    <h1>Hospital Management System</h1>
+    <h1><img src="hos.jpg" alt=""></h1>
     <div class="background">
         <div class="shape"></div>
         <div class="shape"></div>
