--- a/new_patient.html
+++ b/new_patient.html
@@ -13,8 +13,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #a4a7aa;
-            color: #ecf0f1;
+            background-color: #8EC5FC;
+background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
+            color: #161717;
         }
 
         .container {
@@ -22,12 +24,16 @@
             max-width: 500px;
             padding: 20px;
             border-radius: 10px;
-            background-color: #34495e;
+            background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
         .card {
-            background-color: #828486;
+            background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
             border: none;
         }
 
@@ -45,7 +51,7 @@
 
         .form-control, .form-select {
             background-color: #eff1f2;
-            color: #ecf0f1;
+            color: #141415;
             border: 1px solid #f4f5f5;
             border-radius: 5px;
             padding: 10px;
@@ -54,7 +60,7 @@
 
         .form-control:focus, .form-select:focus {
             border-color: #3498db;
-            background-color: #34495e;
+            background-color: #f1f4f7;
             box-shadow: none;
         }
 
@@ -94,7 +100,7 @@
         }
 
         .form-check-label {
-            color: #ecf0f1;
+            color: #131314;
         }
 
         .card-body {
