--- a/update_patient.html
+++ b/update_patient.html
@@ -12,7 +12,7 @@
     }
     .container {
       margin-top: 50px;
-      background-color: #fff;
+      background-color: #161414;
       padding: 30px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
@@ -47,15 +47,15 @@
     }
     #checkButton {
       background-color: #28a745;
-      color: white;
+      color: rgb(18, 17, 17);
     }
     #updateButton {
       background-color: #007bff;
-      color: white;
+      color: rgb(7, 7, 7);
     }
     #backButton {
       background-color: #dc3545;
-      color: white;
+      color: rgb(28, 26, 26);
     }
     button:hover {
       opacity: 0.9;
